--- a/koallab/src/frontend/components/styles/TaskCompact.css
+++ b/koallab/src/frontend/components/styles/TaskCompact.css
@@ -1,4 +1,4 @@
-.Task {
+.TaskCompact {
     /* border: 1px solid #ccc; */
     border-radius: 15px;
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
