--- a/koallab/src/App.css
+++ b/koallab/src/App.css
@@ -1,42 +1,55 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+*{
+  margin:0;
+  padding:0;
+  text-decoration: none;
 }
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
+.container{
+  display:flex;
 }
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
+main{
+  width: 100%;
+  padding: 20px;
 }
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.sidebar{
+  background: #1c2536;
+  color: #e9eaec;
+  height: 100vh;
+  width: 200px;
+  transition: all 0.5s;
 }
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.top_section{
+  display: flex;
+  align-items:center;
+  padding:20px 15px;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.bottom_section{
+  position: absolute;
+  bottom: 0;
 }
-
-.card {
-  padding: 2em;
+.logo{
+  font-size: 30px;
 }
-
-.read-the-docs {
-  color: #888;
+.bars{
+  display: flex;
+  font-size: 25px;
+  margin-left: 50px;
+}
+.link{
+  display: flex;
+  color: #fff;
+  padding: 10px 15px;
+  gap: 15px;
+  transition: all 0.5s;
+}
+.link:hover{
+  /* background:lightskyblue; */
+  color: #EDB693;
+  transition: all 0.5s;
+}
+.active{
+  /* background: lightskyblue; */
+  color: lightskyblue;
+}
+.icon, .link_text{
+  font-size: 20px;
 }
