Group Page: Small cursor fixes

--- a/koallab/src/frontend/pages/group/Group.css
+++ b/koallab/src/frontend/pages/group/Group.css
@@ -17,6 +17,7 @@
 }
 
 .wrenchIcon{
+    cursor: pointer;
     width: 20px;
     flex: 1;
 
@@ -41,6 +42,7 @@
 }
 
 .pencilIcon{
+    cursor: pointer;
     flex: 1;
 }
 
