--- a/koallab/src/frontend/components/styles/GroupUserCard.css
+++ b/koallab/src/frontend/components/styles/GroupUserCard.css
@@ -7,6 +7,9 @@
     align-items: center;
     margin-top: 10px;
     border-radius: 10px;
-    
     box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.3);
+}
+
+.GroupUserCard_trashIcon{
+    cursor: pointer;
 }
