Changes to Project page

--- a/koallab/src/frontend/pages/project/Project.css
+++ b/koallab/src/frontend/pages/project/Project.css
@@ -22,9 +22,11 @@
 
 }
 
-.project_info{
+.view_resources{
     margin-top: 20px;
     margin-bottom: 20px;
+    cursor: pointer;
+
 }
 
 .middle_section_project{
@@ -35,7 +37,7 @@
 
 }
 
-.view_resources{
+.project_progress{
     background-color: #A7C7E7;
     margin-top: 20px;
     margin-bottom: 20px;
@@ -43,11 +45,19 @@
     border-radius: 10px;
     box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.3);
     display: flex;
-    justify-content: center;
-    align-items: center;
     font-size: 36px;
 }
 
+.project_progress_fill{
+    left: 0px;
+    top: 0px;
+    background-color: #2ecc71;
+    transition: width 0.5s ease-out;
+    width: 100%;
+    height: 100px;
+    border-radius: 10px;
+    
+}
 
 .project_member_title{
     flex: 15;
@@ -108,4 +118,21 @@
 .task_section_header{
     display: flex;
     gap: 10px;
+}
+
+.add_button{
+    margin-top: 5px;
+    cursor: pointer;
+}
+
+.AddUserToProjectBox{
+    display: flex;
+    width: 100px;
+    height: 100px;
+    background-color: #A7C7E7;
+    justify-content: center;
+    align-items: center;
+    margin-top: 10px;
+    border-radius: 10px;
+    box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.3);
 }
