--- a/koallab/src/frontend/components/styles/ProjectInfoCard.css
+++ b/koallab/src/frontend/components/styles/ProjectInfoCard.css
@@ -17,3 +17,8 @@
     border-radius: 10px;
     padding: 20px;
 }
+
+.ProjectInfoCard_buttons{
+    display: flex;
+    justify-content: space-between;
+}
