--- a/koallab/src/frontend/pages/project/Project.css
+++ b/koallab/src/frontend/pages/project/Project.css
@@ -38,12 +38,12 @@
 }
 
 .project_progress{
-    background-color: #A7C7E7;
+    background-color: rgba(167,199,231,0.1);
     margin-top: 20px;
     margin-bottom: 20px;
     height: 100px;
     border-radius: 10px;
-    box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.3);
+    /* box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.3); */
     display: flex;
     font-size: 36px;
 }
@@ -51,7 +51,7 @@
 .project_progress_fill{
     left: 0px;
     top: 0px;
-    background-color: #2ecc71;
+    background-color: rgba(46, 204, 113, 0.7);
     transition: width 0.5s ease-out;
     width: 100%;
     height: 100px;
