--- a/koallab/src/frontend/pages/project/Project.css
+++ b/koallab/src/frontend/pages/project/Project.css
@@ -22,12 +22,6 @@
 
 }
 
-.view_resources{
-    margin-top: 20px;
-    margin-bottom: 20px;
-    cursor: pointer;
-
-}
 
 .middle_section_project{
     margin-top: 20px;
@@ -156,4 +150,9 @@
     box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.3);
     border-radius: 10px;
     padding: 20px;
+}
+
+.Resources_title{
+    display: flex;
+    justify-content: space-between;
 }
