--- a/koallab/src/frontend/pages/project/Project.css
+++ b/koallab/src/frontend/pages/project/Project.css
@@ -176,7 +176,8 @@
 
 .DeleteUser_buttons{
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
+    margin-top: 10px;
 }
 
 .DeleteUser_modal{
